--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "md5": "^2.2.1",
     "md5.js": "^1.3.5",
     "moment": "^2.24.0",
+    "sass-resources-loader": "^2.0.1",
+    "style-resources-loader": "^1.2.1",
     "vue": "^2.5.2",
+    "vue-clipboard2": "^0.3.0",
     "vue-resource": "^1.5.1",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
